--- a/data/food10_Y1.yaml
+++ b/data/food10_Y1.yaml
@@ -8,16 +8,16 @@
 
 # Train/val/test sets as 1) dir: path/to/imgs, 2) file: path/to/imgs.txt, or 3) list: [path/to/imgs1, path/to/imgs2, ..]
 # Y1
-# path: dataset/ # dataset root dir
-# train: train/images/ # train images (relative to 'path') 128 images
-# val: test/images/ # val images (relative to 'path') 128 images
-# test: test/images/ # test images (optional)
+path: dataset/ # dataset root dir
+train: train_Y1/images/ # train images (relative to 'path') 128 images
+val: train_Y1/images/ # val images (relative to 'path') 128 images
+test: test_Y1/images/ # test images (optional)
 
 # Y2
-path: dataset/ # dataset root dir
-train: train_Y2/images/ # train images (relative to 'path') 128 images
-val: test_Y2/images/ # val images (relative to 'path') 128 images
-test: test_Y2/images/ # test images (optional)
+# path: dataset/ # dataset root dir
+# train: train_Y2/images/ # train images (relative to 'path') 128 images
+# val: train_Y2/images/ # val images (relative to 'path') 128 images
+# test: test_Y2/images/ # test images (optional)
 
 # Classes
 names:
