modify test path

--- a/data/food10_Y1.yaml
+++ b/data/food10_Y1.yaml
@@ -11,7 +11,7 @@
 path: dataset/ # dataset root dir
 train: train_Y1/images/ # train images (relative to 'path') 128 images
 val: train_Y1/images/ # val images (relative to 'path') 128 images
-test: test_Y1/images/ # test images (optional)
+test: test/images/ # test images (optional)
 
 # Y2
 # path: dataset/ # dataset root dir
