--- a/data/food10_Y2.yaml
+++ b/data/food10_Y2.yaml
@@ -16,7 +16,7 @@
 # Y2
 path: dataset/ # dataset root dir
 train: train_Y2/Y2_train.txt # train images (relative to 'path') 128 images
-val: train_Y2/Y2_train.txt # val images (relative to 'path') 128 images
+val: train_Y2/Y2_val.txt # val images (relative to 'path') 128 images
 test: test_Y2/images/ # test images (optional)
 
 # Classes
