--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,7 @@ data/images/*
 coco/
 coco128/
 VOC/
+dataset/*
 
 # MATLAB GitIgnore -----------------------------------------------------------------------------------------------------
 *.m~
