--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,14 @@
 # Repo-specific GitIgnore ----------------------------------------------------------------------------------------------
-# *.jpg
-# *.jpeg
-# *.png
+*.jpg
+*.jpeg
+*.png
 *.bmp
 *.tif
 *.tiff
 *.heic
-# *.JPG
-# *.JPEG
-# *.PNG
+*.JPG
+*.JPEG
+*.PNG
 *.BMP
 *.TIF
 *.TIFF
@@ -44,6 +44,7 @@ data/images/*
 coco/
 coco128/
 VOC/
+dataset/*
 
 # MATLAB GitIgnore -----------------------------------------------------------------------------------------------------
 *.m~
