add test data and autosplit train and val text file

--- a/data/food16.yaml
+++ b/data/food16.yaml
@@ -13,6 +13,11 @@ train: food16_train.txt # train images (relative to 'path') 128 images
 val: food16_val.txt # val images (relative to 'path') 128 images
 test:  # test images (optional)
 
+path:  # dataset root dir
+train: autosplit_train.txt # train images (relative to 'path') 128 images
+val: autosplit_val.txt # val images (relative to 'path') 128 images
+test:  # test images (optional)
+
 # Classes
 names:
   0: basil
